# ColoredShadowEngine

./: CMakeLists.txt  LICENSE  main.cpp
libs/: mesh.h  model.h
shaders/: shader.frag  shader.vert  shadow_mapping.frag  shadow_mapping.vert  shadow_mapping_depth.vert
